--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -13,9 +13,9 @@
 
     <ImageView
         android:id="@+id/imgLogo"
-        android:layout_width="128dp"
-        android:layout_height="128dp"
-        android:layout_marginTop="64dp"
+        android:layout_width="@dimen/_110sdp"
+        android:layout_height="@dimen/_110sdp"
+        android:layout_marginTop="@dimen/_50sdp"
         android:src="@drawable/qit_logo"
         android:transitionName="appLogo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,11 +27,11 @@
         android:id="@+id/tilLoginAut"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:paddingLeft="@dimen/_32sdp"
+        android:paddingRight="@dimen/_32sdp"
         android:textColorHint="@color/colorAuthText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,17 +52,17 @@
         android:id="@+id/tilPasswordAut"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:paddingLeft="@dimen/_32sdp"
+        android:paddingRight="@dimen/_32sdp"
         android:textColorHint="@color/colorAuthText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tilLoginAut"
         app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@color/colorMainBackground"
+        app:passwordToggleTint="@color/cardview_light_background"
         app:passwordToggleTintMode="multiply">
 
         <android.support.v7.widget.AppCompatEditText
@@ -76,67 +76,84 @@
 
     </android.support.design.widget.TextInputLayout>
 
-    <CheckBox
+    <net.igenius.customcheckbox.CustomCheckBox
         android:id="@+id/rememberCheckBox"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_20sdp"
+        android:layout_margin="@dimen/_16sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_marginStart="@dimen/_40sdp"
+        app:color_checked="@android:color/transparent"
+        app:color_tick="@color/cardview_dark_background"
+        app:color_unchecked_stroke="@color/colorAuthText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.09"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tilPasswordAut"
+        app:small_tick="false" />
+
+    <TextView
+        android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="8dp"
-        android:text="Remember me"
-        android:textColor="@color/colorAuthText"
-        android:textColorLink="@color/colorAuthText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tilPasswordAut" />
+        android:layout_marginBottom="@dimen/_8sdp"
+        android:layout_marginLeft="@dimen/_8sdp"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:text="Save login"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintBottom_toBottomOf="@+id/rememberCheckBox"
+        app:layout_constraintStart_toEndOf="@+id/rememberCheckBox"
+        app:layout_constraintTop_toTopOf="@+id/rememberCheckBox" />
 
     <Button
         android:id="@+id/btnLogIn"
         android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="@dimen/_48sdp"
+        android:layout_marginEnd="@dimen/_40sdp"
+        android:layout_marginStart="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_16sdp"
         android:background="@drawable/custom_btn"
         android:onClick="logIn"
-        android:padding="16dp"
+        android:padding="@dimen/_10sdp"
         android:text="@string/log_in"
         android:textColor="@color/colorAuthText"
-        android:textSize="24sp"
+        android:textSize="@dimen/_20ssp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rememberCheckBox" />
 
-    <TextView
+    <Button
         android:id="@+id/etRegistration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_32sdp"
+        android:layout_marginBottom="@dimen/_16sdp"
+        android:layout_marginEnd="@dimen/_24sdp"
+        android:background="@drawable/custom_btn"
         android:gravity="center"
         android:inputType="textPersonName"
         android:onClick="register"
         android:text="Create New Account?"
         android:textAllCaps="false"
         android:textColor="@color/material_drawer_dark_header_selection_text"
-        android:textSize="14sp"
+        android:textSize="@dimen/_9ssp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
+    <Button
         android:id="@+id/etForgotPass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="16dp"
-        android:ems="10"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_32sdp"
+        android:layout_marginBottom="@dimen/_16sdp"
+        android:layout_marginStart="@dimen/_24sdp"
+        android:background="@drawable/custom_btn"
         android:gravity="center"
         android:inputType="textPersonName"
+        android:onClick="forgot"
         android:text="Forgot your password?"
         android:textColor="@color/material_drawer_dark_header_selection_text"
-        android:textSize="14sp"
+        android:textSize="@dimen/_9ssp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
