--- a/app/src/main/res/drawable/custom_btn_click.xml
+++ b/app/src/main/res/drawable/custom_btn_click.xml
@@ -5,7 +5,7 @@
         android:radius="20dp" />
 
     <solid
-        android:color="@android:color/transparent" />
+        android:color="#FFFFFF" />
 
     <stroke
         android:color="#FFFFFF"
