--- a/app/src/main/res/drawable/custom_btn_dark_click.xml
+++ b/app/src/main/res/drawable/custom_btn_dark_click.xml
@@ -5,10 +5,10 @@
         android:radius="20dp" />
 
     <solid
-        android:color="@android:color/transparent" />
+        android:color="#D3D3D3" />
 
     <stroke
-        android:color="#FFFFFF"
+        android:color="#D3D3D3"
         android:width="2dp" />
 
     <size
