--- a/app/src/main/res/layout/activity_questionnaire_answers.xml
+++ b/app/src/main/res/layout/activity_questionnaire_answers.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cardview_shadow_start_color"
-    android:descendantFocusability="beforeDescendants">
+    android:background="@drawable/back_ground_img_login"
+    android:descendantFocusability="beforeDescendants"
+    android:gravity="right"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarQuestionnairesAnswersT"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/cardview_shadow_start_color"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,34 +23,46 @@
 
     <LinearLayout
         android:id="@+id/answer_card_view_main"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_margin="8dp"
+        android:layout_weight="1"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbarQuestionnairesAnswersT">
 
-        <android.support.v7.widget.CardView
+        <com.loopeer.shadow.ShadowView
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:orientation="vertical">
+            android:elevation="@dimen/_8sdp"
+            android:foreground="?attr/selectableItemBackground"
+            android:orientation="vertical"
+            app:cornerRadiusBL="@dimen/_14sdp"
+            app:cornerRadiusBR="@dimen/_14sdp"
+            app:cornerRadiusTL="@dimen/_14sdp"
+            app:cornerRadiusTR="@dimen/_14sdp"
+            app:shadowColor="@color/warm_grey"
+            app:shadowMargin="@dimen/_8sdp"
+            app:shadowRadius="@dimen/_8sdp"
+            tools:targetApi="lollipop">
 
-            <android.support.constraint.ConstraintLayout
+            <LinearLayout
                 android:id="@+id/relativeLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tvQuestion"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="false"
                     android:padding="8dp"
                     android:text="TextView"
+                    android:textAlignment="center"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +71,7 @@
 
                 <TextView
                     android:id="@+id/tvIsNecessary"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxWidth="128dp"
                     android:padding="8dp"
@@ -69,89 +83,68 @@
 
                 <TextView
                     android:id="@+id/tvAuthor"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="32dp"
+                    android:layout_marginTop="8dp"
+                    android:paddingLeft="8dp"
                     android:text="TextView"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvIsNecessary" />
 
 
-            </android.support.constraint.ConstraintLayout>
+            </LinearLayout>
 
-        </android.support.v7.widget.CardView>
+        </com.loopeer.shadow.ShadowView>
     </LinearLayout>
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardView3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/answer_card_view_main">
+    <LinearLayout
+        android:id="@+id/linear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:layout_weight="5"
+        android:background="@drawable/custom_btn"
+        android:orientation="vertical"
+        android:padding="8dp">
 
-
-        <LinearLayout
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvQuestion"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent" />
+    </LinearLayout>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rvQuestion"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </LinearLayout>
-
-
-    </android.support.v7.widget.CardView>
 
     <LinearLayout
         android:id="@+id/linearLayout3"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_16sdp"
+        android:layout_marginEnd="@dimen/_24sdp"
+        android:gravity="right"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent">
 
-        <TextView
-            android:id="@+id/answer_cancel_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:layout_weight="1"
-            android:text="CANCEL"
-            android:textAlignment="center"
-            android:textColor="@color/colorAuthText"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-        <TextView
+        <Button
             android:id="@+id/answer_save_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_128sdp"
+            android:layout_height="@dimen/_32sdp"
             android:layout_margin="8dp"
-            android:layout_weight="1"
+            android:background="@drawable/custom_btn"
             android:text="SAVE ANSWERS"
             android:textAlignment="center"
             android:textColor="@color/colorAuthText"
-            android:textSize="18sp"
+            android:textSize="@dimen/_8ssp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
     </LinearLayout>
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
 
 
