--- a/app/src/main/res/layout/activity_questions_creation.xml
+++ b/app/src/main/res/layout/activity_questions_creation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cardview_shadow_start_color"
+    android:background="@drawable/back_ground_img_login"
     android:descendantFocusability="beforeDescendants"
     android:orientation="vertical"
     tools:context="com.qit.android.activity.QuestionsCreationActivity">
@@ -18,6 +18,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Press + to add new question"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/scrollView" />
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -73,41 +87,29 @@
 
     <LinearLayout
         android:id="@+id/layout"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/scrollView"
         android:layout_gravity="center_horizontal|bottom"
         android:layout_marginBottom="8dp"
+        android:gravity="right"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent">
 
-        <TextView
-            android:id="@+id/btnCancel"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom"
-            android:layout_margin="8dp"
-            android:layout_weight="1"
-            android:onClick="handleBtnCancel"
-            android:text="Cancel"
-            android:textAlignment="center"
-            android:textColor="@color/colorAuthText"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <TextView
+        <Button
             android:id="@+id/btnNext"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom"
+            android:layout_width="@dimen/_120sdp"
+            android:layout_height="@dimen/_32sdp"
             android:layout_margin="8dp"
             android:layout_weight="1"
+            android:background="@drawable/custom_btn"
             android:onClick="handleBtnCreate"
             android:text="Next"
             android:textAlignment="center"
             android:textColor="@color/colorAuthText"
-            android:textSize="18sp"
+            android:textSize="@dimen/_9ssp"
             android:textStyle="bold" />
     </LinearLayout>
 
