--- a/app/src/main/res/layout/item_event_card.xml
+++ b/app/src/main/res/layout/item_event_card.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.loopeer.shadow.ShadowView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginTop="8dp">
+    android:elevation="@dimen/_8sdp"
+    android:foreground="?attr/selectableItemBackground"
+    app:cornerRadiusTR="@dimen/_16sdp"
+    app:cornerRadiusBL="@dimen/_16sdp"
+    app:shadowMargin="@dimen/_8sdp"
+    app:shadowRadius="@dimen/_8sdp"
+    app:shadowColor="@color/warm_grey"
+    tools:targetApi="lollipop">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,11 +22,11 @@
             android:id="@+id/tv_header_card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_8sdp"
             android:text="TextView"
             android:textColor="@color/cardview_dark_background"
-            android:textSize="18sp"
+            android:textSize="@dimen/_14ssp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -30,11 +35,11 @@
             android:id="@+id/tv_details_card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_8sdp"
             android:text="TextView"
             android:textColor="@color/cardview_dark_background"
-            android:textSize="14sp"
+            android:textSize="@dimen/_10ssp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_header_card" />
@@ -43,24 +48,22 @@
             android:id="@+id/tv_owner_card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginBottom="@dimen/_8sdp"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_4sdp"
             android:text="TextView"
-            android:textSize="12sp"
+            android:textSize="@dimen/_8ssp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_date_card" />
 
-        <TextView
+        <ImageView
             android:id="@+id/tv_is_event_opened_card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:text="TextView"
-            android:textSize="12sp"
+            android:layout_marginEnd="@dimen/_8sdp"
+            android:layout_marginStart="@dimen/_8sdp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/tv_owner_card"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,13 +75,13 @@
             android:id="@+id/tv_date_card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_8sdp"
             android:text="TextView"
-            android:textSize="12sp"
+            android:textSize="@dimen/_8ssp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_details_card" />
     </android.support.constraint.ConstraintLayout>
 
-</android.support.v7.widget.CardView>
+</com.loopeer.shadow.ShadowView>
