--- a/app/src/main/res/layout/item_message_received.xml
+++ b/app/src/main/res/layout/item_message_received.xml
@@ -10,37 +10,10 @@
     android:paddingTop="8dp">
 
     <LinearLayout
+        android:id="@+id/messageLayoutText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteY="8dp">
-
-        <TextView
-            android:id="@+id/text_message_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="4dp"
-            android:text="John Doe"
-            android:textSize="12sp"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/text_message_time"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="4dp"
-            android:layout_weight="1"
-            android:text="11:40"
-            android:textSize="10sp"
-            app:layout_constraintBottom_toBottomOf="@+id/text_message_body"
-            app:layout_constraintLeft_toRightOf="@+id/text_message_body" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_rectangle_orange"
         android:orientation="vertical"
         tools:layout_editor_absoluteY="8dp">
 
@@ -51,12 +24,46 @@
             android:layout_marginLeft="8dp"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
-            android:background="@drawable/rounded_rectangle_orange"
             android:maxWidth="240dp"
             android:padding="8dp"
             android:text="hi man, how are you?"
             android:textColor="#ffffff"
+            android:textSize="@dimen/_12ssp"
             app:layout_constraintTop_toBottomOf="@+id/text_message_name" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/_2sdp"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal"
+            tools:layout_editor_absoluteY="8dp">
+
+            <TextView
+                android:id="@+id/text_message_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="4dp"
+                android:layout_weight="1"
+                android:text="John Doe"
+                android:textColor="@color/cardview_light_background"
+                android:textSize="@dimen/_8ssp"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/text_message_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="11:40"
+                android:textColor="@color/cardview_light_background"
+                android:textSize="@dimen/_8ssp"
+                app:layout_constraintBottom_toBottomOf="@+id/text_message_body"
+                app:layout_constraintLeft_toRightOf="@+id/text_message_body" />
+        </LinearLayout>
 
     </LinearLayout>
 
