--- a/app/src/main/res/layout/item_password_werification.xml
+++ b/app/src/main/res/layout/item_password_werification.xml
@@ -13,48 +13,63 @@
             android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_margin="@dimen/_16sdp"
+            android:layout_marginEnd="@dimen/_8sdp"
+            android:layout_marginStart="@dimen/_8sdp"
             android:gravity="center"
             android:text="Enter the passwort to Event"
             android:textColor="@color/cardview_dark_background"
-            android:textSize="18sp"
+            android:textSize="@dimen/_14ssp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/password_edit_text_to_event"
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilLoginPAswItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:ems="10"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:padding="16dp"
-            android:singleLine="true"
-            android:textColor="@color/colorDarkBlue"
-            android:textSize="14sp" />
+            android:layout_marginEnd="@dimen/_8sdp"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:textColorHint="@color/cardview_dark_background"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgLogo">
+
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/password_edit_text_to_event"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/_16sdp"
+                android:layout_marginStart="@dimen/_16sdp"
+                android:ems="10"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:textColor="@color/colorDarkBlue"
+                android:textSize="@dimen/_14ssp" />
+
+        </android.support.design.widget.TextInputLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="8dp">
 
             <Button
                 android:id="@+id/cancel_password_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
+                android:layout_margin="@dimen/_16sdp"
                 android:layout_weight="1"
-                android:background="@android:color/transparent"
+                android:background="@drawable/custom_btn_dark"
                 android:text="Cancel"
-                android:textColor="@color/colorDarkBlue"
+                android:textAllCaps="false"
+                android:textColor="@color/cardview_dark_background"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.25"
@@ -66,13 +81,13 @@
                 android:id="@+id/enter_password_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
+                android:layout_margin="@dimen/_16sdp"
                 android:layout_weight="1"
-                android:background="@android:color/transparent"
+                android:background="@drawable/custom_btn_dark"
                 android:text="Enter"
-                android:textColor="@color/colorDarkBlue"
+                android:textAllCaps="false"
+                android:textColor="@color/cardview_dark_background"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.75"
