--- a/app/src/main/res/layout/item_question_header.xml
+++ b/app/src/main/res/layout/item_question_header.xml
@@ -1,29 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.loopeer.shadow.ShadowView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:orientation="vertical">
+    android:layout_margin="@dimen/_8sdp"
+    android:orientation="vertical"
+    android:elevation="@dimen/_8sdp"
+    android:foreground="?attr/selectableItemBackground"
+    app:cornerRadiusTR="@dimen/_16sdp"
+    app:cornerRadiusBL="@dimen/_16sdp"
+    app:shadowMargin="@dimen/_8sdp"
+    app:shadowRadius="@dimen/_8sdp"
+    app:shadowColor="@color/warm_grey"
+    tools:targetApi="lollipop">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="16dp">
+        android:paddingLeft="@dimen/_16sdp"
+        android:paddingRight="@dimen/_16sdp"
+        android:paddingTop="@dimen/_16sdp">
 
         <TextView
             android:id="@+id/tvQuestion"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="false"
-            android:padding="8dp"
+            android:padding="@dimen/_8sdp"
             android:text="TextView"
-            android:textSize="18sp"
+            android:textSize="@dimen/_12ssp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,10 +41,10 @@
             android:id="@+id/tvIsNecessary"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:maxWidth="128dp"
-            android:padding="8dp"
+            android:maxWidth="@dimen/_110sdp"
+            android:padding="@dimen/_8sdp"
             android:text="TextView"
-            android:textSize="14sp"
+            android:textSize="@dimen/_10ssp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,9 +55,9 @@
             android:id="@+id/tvAuthor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginBottom="@dimen/_8sdp"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_8sdp"
             android:text="TextView"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -58,5 +66,5 @@
 
     </android.support.constraint.ConstraintLayout>
 
-</android.support.v7.widget.CardView>
+</com.loopeer.shadow.ShadowView>
 
