--- a/app/src/main/res/layout/item_question_questionnarie_answer.xml
+++ b/app/src/main/res/layout/item_question_questionnarie_answer.xml
@@ -2,14 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.v7.widget.CardView
+    <com.loopeer.shadow.ShadowView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:elevation="@dimen/_8sdp"
+        android:foreground="?attr/selectableItemBackground"
+        app:cornerRadiusTR="@dimen/_16sdp"
+        app:cornerRadiusBL="@dimen/_16sdp"
+        app:shadowMargin="@dimen/_8sdp"
+        app:shadowRadius="@dimen/_8sdp"
+        app:shadowColor="@color/warm_grey"
+        tools:targetApi="lollipop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -33,7 +42,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
-                android:background="@drawable/border"
+                android:background="@drawable/custom_btn_dark"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <CheckBox
@@ -48,7 +58,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
-                android:background="@drawable/border"
+                android:background="@drawable/custom_btn_dark"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <RadioGroup
@@ -71,7 +82,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
-                android:background="@drawable/border"
+                android:background="@drawable/custom_btn_dark"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <EditText
@@ -86,5 +98,5 @@
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </com.loopeer.shadow.ShadowView>
 </LinearLayout>
