--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -4,8 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="20sp"
+    android:textSize="@dimen/_16ssp"
     android:gravity="left"
-    android:textColor="@color/colorAuthText"
+    android:textColor="@color/cardview_dark_background"
     android:padding="5dip"
     />
