--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
 
 
         <item name="android:fitsSystemWindows">true</item>
-        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorPrimary">@color/navigationBarColor</item> <!-- // color of the text on qit activity-->
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="android:windowTranslucentStatus" tools:targetApi="22">true</item>
 
@@ -20,27 +20,26 @@
         <item name="windowNoTitle">true</item>
 
         <!-- Toolbar Theme / Apply white arrow -->
-        <item name="colorControlNormal">@color/colorMainBackground</item>
+        <item name="colorControlNormal">@color/navigationBarColor</item>
         <item name="actionBarTheme">@style/AppTheme.ActionBarTheme</item>
 
         <!-- Material Theme -->
-        <item name="colorPrimary">@color/colorMainBackground</item>
-        <item name="colorPrimaryDark">@color/colorMainBackground</item>
-        <item name="colorAccent">@color/colorMainBackground</item>
+        <item name="colorPrimary">@color/navigationBarColor</item>
+        <item name="colorPrimaryDark">@color/navigationBarColor</item>
+        <item name="colorAccent">@color/navigationBarColor</item>
 
-        <item name="android:navigationBarColor" tools:targetApi="21">@color/navigationBarColor
-        </item>
+        <item name="android:navigationBarColor" tools:targetApi="21">@color/navigationBarColor</item>
         <item name="android:windowDrawsSystemBarBackgrounds" tools:targetApi="21">true</item>
 
     </style>
 
     <style name="MyDialog" parent="@android:style/Theme.Dialog">
-        <item name="android:windowFrame">@color/colorDarkBlue</item>
-        <item name="android:windowBackground">@color/colorDarkBlue</item>
+        <item name="android:windowFrame">@color/mainGray</item>
+        <item name="android:windowBackground">@color/colorAuthText</item>
         <item name="android:windowIsFloating">false</item>
         <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowTitleStyle">@color/colorDarkBlue</item>
-        <item name="android:colorBackgroundCacheHint">@color/colorDarkBlue</item>
+        <item name="android:windowTitleStyle">@color/mainGray</item>
+        <item name="android:colorBackgroundCacheHint">@color/mainGray</item>
         <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
         <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
         <item name="android:gravity">center</item>
@@ -52,12 +51,12 @@
 
     <style name="AppTheme.ActionBarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
         <!-- White arrow -->
-        <item name="colorControlNormal">@android:color/white</item>
+        <item name="colorControlNormal">@color/colorAuthText</item>
     </style>
 
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="spinBars">true</item>
-        <item name="color">@color/drawerArrowColor</item>
+        <item name="color">@color/colorAuthText</item>
     </style>
 
     <style name="HintTextDark" parent="TextAppearance.AppCompat.Small">
@@ -65,12 +64,12 @@
     </style>
 
     <style name="HintTextLight" parent="TextAppearance.AppCompat.Small">
-        <item name="android:textColor">#20f25f</item>
+        <item name="android:textColor">@color/navigationBarColor</item>
     </style>
 
     <style name="QITSwitch" parent="Theme.AppCompat.Light">
         <!-- active thumb & track color (30% transparency) -->
-        <item name="colorControlActivated">#48c45d</item>
+        <item name="colorControlActivated">#D3D3D3</item>
 
         <!-- inactive thumb color -->
         <item name="colorSwitchThumbNormal">#f1f1f1</item>
